about on mobile fix

--- a/style/style.css
+++ b/style/style.css
@@ -181,7 +181,7 @@ body
         z-index: -1;
         position: relative;
         right: 350px;
-        left: 100px;
+        left: 25px;
     }
     #about1, #about2
     {
